2008-04-29T04:13	Joseph Lombrozo <digitaljeebus@gmail.com>	
	* src/Core/VSVersion.cs
	- Fixed spelling mistake in enum comment.
	* src/Core/Attributes/DataNodeAttribute.cs
	- Allowed the DataNodeAttribute to be attached to a single class 
	  more than once, allowing one class to be used to parse more than 
	  one node at a time.
	* src/Core/Kernel.cs
	- Changed CacheNodeTypes() to allow for multiple DataNodeAttribute 
	  instances in one class. Refactored ProcessFile(...) to return Solutions, 
	  rather than adding them to the Kernel.
	* src/Core/Nodes/SolutionNode.cs
	- Added Guid (for embedded folders)
	- Added DatabaseProjects, Solutions and Processes to the SolutionNode 
	  when parsing.
	* src/Core/Nodes/ProjectNode.cs
	- Added FrameworkVersion property to allow for 2.0/3.0/3.5 differentiation.
	* src/Core/Targets/VS2008Target.cs, src/data/prebuild-1.7.xsd
	- Added ability to have embedded solutions, and externally referenced
	  prebuild scripts.

2008-04-24T04:33	John M. Anderson <sontek@gmail.com>	
	* src/Core/Targets/VS2003Target.cs, src/Core/Targets/VSVersion.cs 
	- Moved the VSVersion enum into its own file. 
	* src/Core/Targets/VS2008Target.cs
	- added support for VS2008 
	* src/Core/Nodes/ProjectNode.cs
	- Added initial support for ASP.NET projects 
	* src/Core/Nodes/DatabaseProjectNode.cs
	- Added support for Visual Studio database projects 

2008-02-19T07:08	C.J. Adams-Collier <cjac@colliertech.org>
	* TODO
	- added some tasks from Sam Hocevar
	* src/Core/Targets/AutotoolsTarget.cs
	- added a missing end paren
	* COPYING
	- Removed Randy Ridge's name from the copyright.  Looks to me like
	  his name was present only because the file was nabbed from Tao

2008-02-09T20:29	C.J. Adams-Collier <cjac@colliertech.org>
	* COPYING
	- added MIT/X11 license due to inclusion of code from Monodevelop
	* THANKS
	- added Lluis Sanchez Gual and Todd Berman - I yoinked code from
	  their pkg-config .pc file parser to build AutotoolsTarget.cs.